# niceboard

./: .coveragerc  .gitignore  LICENSE  Niceboard_API.md  README.md  pyproject.toml
.circleci/: config.yml
niceboard/: __init__.py  client.py  exceptions.py  resource.py
niceboard/resources/: __init__.py  categories.py  companies.py  geocoding.py  job_types.py  jobs.py  locations.py  logo.py
niceboard/services/: __init__.py  search.py  upload.py
scripts/: check_coverage.sh  run_integration_tests.sh
tests/: conftest.py  test_client.py  test_companies.py  test_integration.py  test_jobs.py  test_search_service_integration.py  test_services_integration.py  test_upload_service_integration.py
